--- a/src/components/filter/FacetFilter.css
+++ b/src/components/filter/FacetFilter.css
@@ -1,18 +1,9 @@
 .facet-filter {
   padding: 20px;
   padding-left: 4px;
-}
-
-.facet-filter{
-  width: 200px;
-  margin-left: 2px;
-  /* background-color: aquamarine; */
+  width: 220px; /* Adjust the width for better alignment */
   border-right: 1px solid black;
-  margin-left: 3px;
-  padding-left: 12px;
   display: flex;
-  justify-content: center;
   flex-direction: column;
   gap: 20px;
 }
-
