--- a/src/components/Cart/CheckOut.css
+++ b/src/components/Cart/CheckOut.css
@@ -50,3 +50,50 @@
 .align-items-center {
   align-items: center;
 }
+
+
+/* payment options  */
+
+.payment-options {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.price-summary {
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: 10px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.payment-methods {
+  width: 100%;
+}
+
+.payment-options-grid {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.payment-option {
+  width: 45%;
+  margin-bottom: 20px;
+}
+
+.payment-icons {
+  display: flex;
+  justify-content: space-around;
+}
+
+.payment-icons i {
+  font-size: 24px;
+  color: #007bff; /* Adjust color as needed */
+}
+
+.payment-option h6 {
+  text-align: center;
+  margin-bottom: 10px;
+}
