--- a/src/components/Shopping/shopping.css
+++ b/src/components/Shopping/shopping.css
@@ -1,4 +1,4 @@
-.shopping-container{
+/* .shopping-container{
     display: flex;
     flex-direction: row;
 }
@@ -6,5 +6,17 @@
 .product-container{
     display: flex;
     flex-wrap: wrap;
+    margin-left: 10px;
+} */
+
+.shopping-container {
+    display: flex;
+    flex-direction: row;
+}
+
+.product-container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     margin-left: 10px;
 }
